@@ -1,7 +1,9 @@
 #!/bin/sh
 
+# Create the .desktop file for freedesktop.org (Linux) desktops.
+
 if [ $# -ne 4 ]; then
-    echo 'Usage: desktop/desktop.sh outfile icon_and_cmd_name \
+    echo 'Usage: desktop/desktop.sh outfile cmd_name \
 "Real name" "Description"' >> /dev/stderr
     exit 1
 fi
@@ -10,6 +12,8 @@ out=$1
 name=$2
 Name=$3
 description=$4
+
+# NOTICE: $name is also used for the icon.
 
 cat > $out << __EOF__
 [Desktop Entry]
