@@ -1,10 +1,11 @@
-2016-13-32      Oskar Skog      <oskar.skog.finland@gmail.com>
+2016-10-23      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.3.11
         * README: http://anonymine-demo.oskog97.com:8080/ link removed.
         * anonymine.py (curses_game.input): The redrawing of the screen after
             initialization never worked as the game status got changed.
             Junk on the screen from impatient players will now be cleared.
         * INSTALL.Haiku: Use env(1) instead of setting and resetting $TERM.
+        * desktop/*: Brief descriptions.
 
 2016-10-21      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.3.10
